--- a/index.html
+++ b/index.html
@@ -318,13 +318,23 @@
                     <div class="col-md-6">
                         <ul class="e-no-bullets">
                             <li>
+                                <span class="ability-title">PostgreSQL</span>
+                                <span class="ability-score">
+                                    <span class="fa fa-star filled"></span>
+                                    <span class="fa fa-star filled"></span>
+                                    <span class="fa fa-star filled"></span>
+                                    <span class="fa fa-star filled"></span>
+                                    <span class="fa fa-star filled"></span>
+                                </span>
+                            </li>
+                            <li>
                                 <span class="ability-title">Bootstrap Framework</span>
                                 <span class="ability-score">
                                     <span class="fa fa-star filled"></span>
                                     <span class="fa fa-star filled"></span>
                                     <span class="fa fa-star filled"></span>
                                     <span class="fa fa-star filled"></span>
-                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star filled"></span>
                                 </span>
                             </li>
                             <li>
@@ -334,7 +344,7 @@
                                     <span class="fa fa-star filled"></span>
                                     <span class="fa fa-star filled"></span>
                                     <span class="fa fa-star filled"></span>
-                                    <span class="fa fa-star"></span>
+                                    <span class="fa fa-star filled"></span>
                                 </span>
                             </li>
                             <li>
